[package]
name = "tokio-task-queue"
version = "0.1.0"
edition = "2021"
description = "Execute futures from a stream of futures in order in a Tokio task"
authors = ["Victor Porton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt", "macros", "sync", "rt-multi-thread", "time"] } # TODO: Remove unneeeded.
futures = "0.3.21"
tokio-interruptible-future = "0.11.2"
tokio-stream = "0.1.8"
