[package]
name = "tokio-task-queue"
version = "1.0.0"
edition = "2021"
description = "Execute futures from a stream of futures in order in a Tokio task"
authors = ["Victor Porton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros", "sync", "rt-multi-thread", "time"] } # TODO: Remove unneeeded.
futures = "0.3.21"
tokio-interruptible-future = "4.0.0"
tokio-stream = "0.1.8"
send-cell = "0.1.4"
async-trait = "0.1.52"