[package]
name = "tokio-task-queue"
version = "7.0.0"
edition = "2021"
description = "Execute futures from a stream of futures in order in a Tokio task"
authors = ["Victor Porton"]
license = "Apache-2.0"
homepage = "https://github.com/vporton/tokio-task-queue-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros", "sync", "rt-multi-thread", "time"] } # TODO: Remove unneeeded.
tokio-interruptible-future = "8.0.0"
async-trait = "0.1.52"
async-channel = "1.6.1"
